--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,5 +10,6 @@
     </div>
   </a>
 </div>
+<div *ngIf="selectedHero$">Hola {{ selectedHero$ | async }}</div>
 
 <app-hero-search></app-hero-search>
